--- a/notebook_dashboard.ipynb
+++ b/notebook_dashboard.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true,
     "pycharm": {
@@ -12,7 +12,11 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import pandas as pd\n"
+    "import pandas as pd\n",
+    "import yfinance as yf\n",
+    "import time\n",
+    "# ticker_symbol_input = yf.Ticker(\"MSFT\")\n",
+    "# print(ticker_symbol_input.info)"
    ]
   },
   {
@@ -22,8 +26,19 @@
    "source": [
     "# parent/super class\n",
     "class Investment_Dashboard:\n",
-    "    def __init__(self):\n",
-    "        pass"
+    "    def __init__(self, ticker_symbol, current_date, contract_type, exercise_price, expiration_date):\n",
+    "        self.ticker_symbol = ticker_symbol\n",
+    "        self.date = current_date\n",
+    "        self.contract_type = contract_type\n",
+    "        self.exercise_price = exercise_price\n",
+    "        self.expiration_date = expiration_date\n",
+    "\n",
+    "    def portfolio(self):\n",
+    "        pass\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -37,10 +52,7 @@
    "execution_count": 4,
    "outputs": [],
    "source": [
-    "# child class\n",
-    "class futures(Investment_Dashboard):\n",
-    "    def __init__(self):\n",
-    "        pass\n"
+    "\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -53,12 +65,7 @@
    "cell_type": "code",
    "execution_count": 5,
    "outputs": [],
-   "source": [
-    "# child class\n",
-    "class options(Investment_Dashboard):\n",
-    "    def __init__(self):\n",
-    "        pass"
-   ],
+   "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -70,12 +77,7 @@
    "cell_type": "code",
    "execution_count": 6,
    "outputs": [],
-   "source": [
-    "# child class\n",
-    "class swaps(Investment_Dashboard):\n",
-    "    def __init__(self):\n",
-    "        pass"
-   ],
+   "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
