created futures_formula method

--- a/notebook_dashboard.ipynb
+++ b/notebook_dashboard.ipynb
@@ -15,6 +15,7 @@
     "import pandas as pd\n",
     "import yfinance as yf\n",
     "import time\n",
+    "\n",
     "# ticker_symbol_input = yf.Ticker(\"MSFT\")\n",
     "# print(ticker_symbol_input.info)"
    ]
@@ -28,7 +29,7 @@
     "class Investment_Dashboard:\n",
     "    def __init__(self, ticker_symbol, current_date, contract_type, exercise_price, expiration_date):\n",
     "        self.ticker_symbol = ticker_symbol\n",
-    "        self.date = current_date\n",
+    "        self.current_date = current_date\n",
     "        self.contract_type = contract_type\n",
     "        self.exercise_price = exercise_price\n",
     "        self.expiration_date = expiration_date\n",
@@ -36,9 +37,8 @@
     "    def portfolio(self):\n",
     "        pass\n",
     "\n",
-    "\n",
-    "\n",
-    "\n"
+    "    def futures_formula(self, spot_price, risk_free_rate, dividend_yield):\n",
+    "        Price_contract =  spot_price * np.e**((risk_free_rate)* (self.expiration_date- self.current_date))\n"
    ],
    "metadata": {
     "collapsed": false,
