--- a/notebook_dashboard.ipynb
+++ b/notebook_dashboard.ipynb
@@ -2,63 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {
-    "collapsed": true,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import yfinance as yf\n",
+    "import yfinance as yf # Yahoo Finance API\n",
     "from datetime import datetime\n",
-    "\n",
+    "from pprint import pprint # make printing data more readable\n",
+    "from treasury.client import FederalTreasuryClient # Fedearal Open Source Treasury API\n",
+    "import plotly.graph_objs as graph # just in case we need to graph\n",
     "# ticker_symbol_input = yf.Ticker(\"MSFT\")\n",
     "# print(ticker_symbol_input.info)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " current date 2022-11-06; difference between dates  365\n"
-     ]
-    }
-   ],
-   "source": [
-    "# parent/super class\n",
-    "class EDWARD_dashboard:\n",
-    "    def __init__(self, ticker_symbol,  contract_type, exercise_price, expiration_date):\n",
-    "        self.ticker_symbol = ticker_symbol\n",
-    "        self.current_date = datetime.now().strftime(\"%Y-%m-%d\")\n",
-    "        self.contract_type = contract_type\n",
-    "        self.exercise_price = exercise_price\n",
-    "        self.expiration_date = expiration_date\n",
-    "\n",
-    "    def days_between(self):\n",
-    "        d1, d2 = datetime.strptime(self.current_date, \"%Y-%m-%d\"), datetime.strptime(self.expiration_date, \"%Y-%m-%d\")\n",
-    "        diff_times = abs((d2 - d1).days)\n",
-    "        return diff_times\n",
-    "\n",
-    "\n",
-    "    def portfolio(self):\n",
-    "        ticker_symbol = yf.Ticker(self.ticker_symbol)\n",
-    "        pass\n",
-    "\n",
-    "    def futures_formula(self, spot_price, nominal_rate, dividend_yield, inflation_rate):\n",
-    "        Price_contract =  spot_price * np.e**(((1+nominal_rate)/(1+inflation_rate))* (self.days_between()))\n",
-    "\n",
-    "    def __str__(self):\n",
-    "        return f\" current date {str(self.current_date)}; difference between dates {str(self.days_between())}\"\n",
-    "\n",
-    "print(EDWARD_dashboard(3,3,3,\"2023-11-06\"))"
    ],
    "metadata": {
     "collapsed": false,
@@ -69,20 +24,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "invalid literal for int() with base 10: ''",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[1;31mValueError\u001B[0m                                Traceback (most recent call last)",
-      "Input \u001B[1;32mIn [28]\u001B[0m, in \u001B[0;36m<cell line: 5>\u001B[1;34m()\u001B[0m\n\u001B[0;32m      3\u001B[0m \u001B[38;5;66;03m# ticker_symbol = yf.Ticker(input_symbol)\u001B[39;00m\n\u001B[0;32m      4\u001B[0m input_contract_type \u001B[38;5;241m=\u001B[39m \u001B[38;5;28minput\u001B[39m(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mWhat contracct type would you like to use (Futures, Options, Swaps)? \u001B[39m\u001B[38;5;124m\"\u001B[39m)\n\u001B[1;32m----> 5\u001B[0m input_exercise_price \u001B[38;5;241m=\u001B[39m \u001B[38;5;28;43mint\u001B[39;49m\u001B[43m(\u001B[49m\u001B[38;5;28;43minput\u001B[39;49m\u001B[43m(\u001B[49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[38;5;124;43mWhat price would you like to exercise the shares at? \u001B[39;49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[43m)\u001B[49m\u001B[43m)\u001B[49m\n\u001B[0;32m      6\u001B[0m input_expiration_date \u001B[38;5;241m=\u001B[39m \u001B[38;5;28minput\u001B[39m(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mWhat date would you like to set the expiration? (Y-M-D)\u001B[39m\u001B[38;5;124m\"\u001B[39m)\n",
-      "\u001B[1;31mValueError\u001B[0m: invalid literal for int() with base 10: ''"
-     ]
-    }
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# parent/super class\n",
+    "class EDWARD_dashboard:\n",
+    "    def __init__(self, ticker_symbol: str,  contract_type: str, exercise_price: int, expiration_date: str):\n",
+    "        self.ticker_symbol = ticker_symbol.upper()\n",
+    "        self.current_date = datetime.now().strftime(\"%Y-%m-%d\")\n",
+    "        self.contract_type = contract_type\n",
+    "        self.exercise_price = exercise_price\n",
+    "        self.expiration_date = expiration_date\n",
+    "\n",
+    "    def days_between(self):\n",
+    "        d1, d2 = datetime.strptime(self.current_date, \"%Y-%m-%d\"), datetime.strptime(self.expiration_date, \"%Y-%m-%d\")\n",
+    "        diff_times = abs((d2 - d1).days)\n",
+    "        return diff_times\n",
+    "\n",
+    "    def market_price(self):\n",
+    "        ticker_symbol = yf.Ticker(self.ticker_symbol).info\n",
+    "        market_price = ticker_symbol['regularMarketPrice']\n",
+    "        return market_price # spot price\n",
+    "\n",
+    "    def risk_free_rate(self):\n",
+    "        # still need to use API to find nominal_rate and inflation_rate\n",
+    "        risk_free_rate = ((1+nominal_rate)/(1+inflation_rate))\n",
+    "\n",
+    "    def dividend_yield(self):\n",
+    "        ticker_symbol = yf.Ticker(self.ticker_symbol).info\n",
+    "        dividend_rate = ticker_symbol['dividendRate']\n",
+    "        if dividend_rate == None:\n",
+    "            dividend_rate = 0\n",
+    "        return dividend_rate\n",
+    "\n",
+    "    def options_data(self, type): # type can by calls or puts\n",
+    "        try:\n",
+    "            option_data = yf.Ticker(self.ticker_symbol).option_chain(date=self.expiration_date)\n",
+    "            print(f\"Could find a matching expiration date for {self.ticker_symbol} {type} options\")\n",
+    "        except ValueError:\n",
+    "            print(f\"Expirations date chosen isn't available for this stock: {self.ticker_symbol} Here is list of Available {type} options \")\n",
+    "            option_data = yf.Ticker(self.ticker_symbol).option_chain()\n",
+    "        if type == 'calls':\n",
+    "            return option_data.calls\n",
+    "        else:\n",
+    "            return option_data.puts\n",
+    "\n",
+    "    def futures_formula(self):\n",
+    "        Price_contract =  self.market_price()*np.e**((self.risk_free_rate()-self.dividend_yield())*(self.days_between()))\n",
+    "        return Price_contract\n",
+    "\n",
+    "    def relationship_futuresprice_exepctedspotprice(self, k): #k is an investor’s required return for this investment. Ask  if formula is right\n",
+    "        # ask if this method is neccessary or repetitive of the futures_method and also incomplete method at the moment\n",
+    "        indicator = np.e**((self.risk_free_rate()-k) * self.days_between())\n",
+    "        if indicator == 0:\n",
+    "            return f\"No systematic risk\"\n",
+    "        elif indicator < 0:\n",
+    "            return f\"Negative sytematic risk\"\n",
+    "        elif indicator > 0:\n",
+    "            return f\"Positive systematic risk\"\n",
+    "        pass\n",
+    "\n",
+    "    def portfolio(self):\n",
+    "        ticker_symbol = yf.Ticker(self.ticker_symbol)\n",
+    "        pass\n",
+    "\n",
+    "    def __str__(self):\n",
+    "        return f\"Current date {str(self.current_date)}; difference between dates {str(self.days_between())}; upper case ticker {self.ticker_symbol}; market {self.market_price()}; dividend rate {self.dividend_yield()}: \"\n",
+    "\n",
+    "tesla = EDWARD_dashboard(\"tSlA\",\"future\",300,\"2022-11-11\")\n",
+    "print(tesla)\n",
+    "# print(tesla.futures_formula())\n",
+    "# tesla.options_data('calls')\n",
+    "tesla.options_data('puts')\n"
    ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": true
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "# User Inputs\n",
     "input_symbol = input(\"Ticker Symbol you would like to use? \")\n",
@@ -95,7 +121,8 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n"
+     "name": "#%%\n",
+     "is_executing": true
     }
    }
   }
