updated project Jason Ang

--- a/notebook_dashboard.ipynb
+++ b/notebook_dashboard.ipynb
@@ -30,7 +30,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Current date 2022-11-10; difference between dates 1; upper case ticker TSLA; market 190.72; dividend rate 0: \n",
+      "Current date 2022-11-11; difference between dates 0.0; upper case ticker TSLA; market 195.74; dividend rate 0: \n",
       "Got error from yahoo api for ticker TSLA=F, Error: {'code': 'Not Found', 'description': 'No data found, symbol may be delisted'}\n",
       "[*********************100%***********************]  1 of 1 completed\n",
       "\n",
@@ -52,12 +52,14 @@
    "source": [
     "# parent/super class\n",
     "class EDWARD_dashboard:\n",
-    "    def __init__(self, ticker_symbol: str,  contract_type: str, exercise_price: int, expiration_date: str):\n",
+    "    def __init__(self, ticker_symbol: str, exercise_price: float, expiration_date: str, captial: float, risk_tol: float):\n",
     "        self.ticker_symbol = ticker_symbol.upper()\n",
     "        self.current_date = datetime.now().strftime(\"%Y-%m-%d\")\n",
-    "        self.contract_type = contract_type\n",
+    "        # self.contract_type = contract_type\n",
     "        self.exercise_price = exercise_price\n",
     "        self.expiration_date = expiration_date\n",
+    "        self.captial = capital\n",
+    "        self.risk_tol = risk_tol\n",
     "\n",
     "    def days_between(self):\n",
     "        d1, d2 = datetime.strptime(self.current_date, \"%Y-%m-%d\"), datetime.strptime(self.expiration_date, \"%Y-%m-%d\")\n",
@@ -81,50 +83,11 @@
     "            dividend_rate = 0\n",
     "        return dividend_rate\n",
     "\n",
-    "    def options_data(self, type): # type can by calls or puts\n",
-    "        try:\n",
-    "            option_data = yf.Ticker(self.ticker_symbol).option_chain(date=self.expiration_date)\n",
-    "            print(f\"Could find a matching expiration date for {self.ticker_symbol} {type} options\")\n",
-    "        except ValueError:\n",
-    "            print(f\"Expirations date chosen isn't available for this stock: {self.ticker_symbol} Here is list of Available {type} options \")\n",
-    "            option_data = yf.Ticker(self.ticker_symbol).option_chain()\n",
-    "        if type == 'calls':\n",
-    "            return option_data.calls\n",
-    "        elif type =='puts':\n",
-    "            return option_data.puts\n",
-    "\n",
-    "    def futures_data(self):\n",
-    "        futures_data = yf.download(f'{self.ticker_symbol}=F', start='2020-11-11', end='2022-11-11')\n",
-    "        futures_data.index = pd.to_datetime(futures_data.index)\n",
-    "        return futures_data.tail()\n",
-    "\n",
-    "    def futures_plot(self, futures_data):\n",
-    "        # plotting Close price\n",
-    "        plt.figure(figsize=(16,8))\n",
-    "        futures_data['Adj Close'].plot()\n",
-    "        plt.title(f'{self.ticker_symbol} Futures Data', fontsize = 18)\n",
-    "        plt.xlabel('Year', fontsize=16)\n",
-    "        plt.ylabel('Price ($)', fontsize=16)\n",
-    "        plt.xticks(fontsize=15)\n",
-    "        plt.yticks(fontsize=15)\n",
-    "        plt.legend(['Close'], prop={'size': 15})\n",
-    "        plt.show()\n",
-    "\n",
     "\n",
     "    def futures_formula(self):\n",
     "        Price_contract =  self.market_price()*np.e**((self.risk_free_rate()-self.dividend_yield())*(self.days_between()))\n",
     "        return Price_contract\n",
     "\n",
-    "    def relationship_futuresprice_exepctedspotprice(self, k): #k is an investor’s required return for this investment. Ask  if formula is right\n",
-    "        # ask if this method is neccessary or repetitive of the futures_method and also incomplete method at the moment\n",
-    "        indicator = np.e**((self.risk_free_rate()-k) * self.days_between())\n",
-    "        if indicator == 0:\n",
-    "            return f\"No systematic risk\"\n",
-    "        elif indicator < 0:\n",
-    "            return f\"Negative sytematic risk\"\n",
-    "        elif indicator > 0:\n",
-    "            return f\"Positive systematic risk\"\n",
-    "        pass\n",
     "\n",
     "    def portfolio(self):\n",
     "        ticker_symbol = yf.Ticker(self.ticker_symbol)\n",
@@ -168,10 +131,11 @@
     "# User Inputs\n",
     "input_symbol = input(\"Ticker Symbol you would like to use? \")\n",
     "# ticker_symbol = yf.Ticker(input_symbol)\n",
-    "input_contract_type = input(\"What contracct type would you like to use (Futures, Options, Swaps)? \")\n",
+    "capital = input(\"How much Capital would you like to invest \")\n",
+    "risk_tol = input(\"How much Capital would you like to invest \")\n",
     "input_exercise_price = int(input(\"What price would you like to exercise the shares at? \"))\n",
     "input_expiration_date = input(\"What date would you like to set the expiration? (Y-M-D)\")\n",
-    "# EDWARD_dashboard(input_symbol, input_contract_type, input_exercise_price, input_expiration_date)\n"
+    "# EDWARD_dashboard(input_symbol, input_exercise_price, input_expiration_date, capital, risk_tol)\n"
    ],
    "metadata": {
     "collapsed": false,
