adding rates csv file Jason Ang

--- a/notebook_dashboard.ipynb
+++ b/notebook_dashboard.ipynb
@@ -2,18 +2,56 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "outputs": [],
+   "execution_count": 4,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "'\\nPricing of stock futures and construction of a portfolio containing both underlying equity\\nand futures as a hedge.\\n\\nAttributes\\n++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++\\n\\nticker: str\\n    ticker of underlying stock\\n\\ns: float\\n    spot price of underlying stock, in united states dollars $\\n\\nt0: str\\n    current date\\n\\ntf: str\\n    expiration date\\n\\nq: float\\n    dividend yield, in percentage %, default = 0.00%\\n\\ntol: float\\n    risk tolerance, in percentage %, default = 0.00%\\n\\nliq: float\\n    user liquidity, in united states dollars $, default = $10,000\\n\\nshares: float\\n    user position in underlying stock, in united states dollars $, default = 100 * s\\n\\n'"
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "import yfinance as yf # Yahoo Finance API\n",
-    "from datetime import datetime\n",
-    "from pprint import pprint # make printing data more readable\n",
-    "from treasury.client import FederalTreasuryClient # Fedearal Open Source Treasury API\n",
-    "import matplotlib.pyplot as plt # just in case we need to graph\n",
-    "# ticker_symbol_input = yf.Ticker(\"MSFT\")\n",
-    "# print(ticker_symbol_input.info)"
+    "from datetime import datetime  # calculating time until expiration\n",
+    "import numpy as np  # performing numerical methods\n",
+    "import pandas as pd  # printing dataframes\n",
+    "import yfinance as yf # retrieving financial data\n",
+    "import csv # csv library\n",
+    "\n",
+    "\"\"\"\n",
+    "Pricing of stock futures and construction of a portfolio containing both underlying equity\n",
+    "and futures as a hedge.\n",
+    "\n",
+    "Attributes\n",
+    "++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++\n",
+    "\n",
+    "ticker: str\n",
+    "    ticker of underlying stock\n",
+    "\n",
+    "s: float\n",
+    "    spot price of underlying stock, in united states dollars $\n",
+    "\n",
+    "t0: str\n",
+    "    current date\n",
+    "\n",
+    "tf: str\n",
+    "    expiration date\n",
+    "\n",
+    "q: float\n",
+    "    dividend yield, in percentage %, default = 0.00%\n",
+    "\n",
+    "tol: float\n",
+    "    risk tolerance, in percentage %, default = 0.00%\n",
+    "\n",
+    "liq: float\n",
+    "    user liquidity, in united states dollars $, default = $10,000\n",
+    "\n",
+    "shares: float\n",
+    "    user position in underlying stock, in united states dollars $, default = 100 * s\n",
+    "\n",
+    "\"\"\""
    ],
    "metadata": {
     "collapsed": false,
@@ -51,50 +89,103 @@
    ],
    "source": [
     "# parent/super class\n",
-    "class EDWARD_dashboard:\n",
-    "    def __init__(self, ticker_symbol: str, exercise_price: float, expiration_date: str, captial: float, risk_tol: float):\n",
-    "        self.ticker_symbol = ticker_symbol.upper()\n",
-    "        self.current_date = datetime.now().strftime(\"%Y-%m-%d\")\n",
-    "        # self.contract_type = contract_type\n",
-    "        self.exercise_price = exercise_price\n",
-    "        self.expiration_date = expiration_date\n",
-    "        self.captial = capital\n",
-    "        self.risk_tol = risk_tol\n",
+    "class Hedge:\n",
+    "    def __init__(self, s: float, t0: str, tf: str, q: float = 0.00, tol: float = 0.00, liq: float = 10000, shares: float = 100, ticker =\"GSPC\"):\n",
+    "        assert (1 <= len(ticker) <= 5);  # ticker symbol must have between one and five characters\n",
+    "        assert s >= 0  # stock price cannot be less than $0.00\n",
+    "        assert q >= 0 # dividend yield cannot be less than 0.00%\n",
+    "        assert tol >= 0  # risk tolerance cannot be less than 0.00%\n",
+    "        assert liq >= 10000  # user must have at least $10,000 in liquidity\n",
+    "        assert shares >= 0.00  # user must have at least 100 shares in underlying equity\n",
+    "        # ticker symbol\n",
+    "        self.ticker = yf.Ticker(ticker.upper()).info\n",
+    "        # spot price\n",
+    "        self.s = float(self.ticker['regularMarketPrice'])\n",
+    "        # risk free rate\n",
+    "        self.rf = Hedge.risk_free_rate()\n",
+    "        # dividend yield\n",
+    "        self.q = float(self.ticker['dividendRate'])\n",
+    "        # intial date\n",
+    "        self.t0 = datetime.strptime(t0, \"%Y-%m-%d\")\n",
+    "        #final date\n",
+    "        self.tf = datetime.strptime(tf, \"%Y-%m-%d\")\n",
+    "        # porportion of time from intial to final\n",
+    "        self.t = float(((self.tf  -self.t0) / 365))\n",
+    "        # risk tolerance\n",
+    "        self.tol = float(tol)\n",
+    "        # Capital/liquid money\n",
+    "        self.liq = float(liq)\n",
+    "        # total value of number of shares\n",
+    "        self.shares = float(shares * self.s);\n",
     "\n",
-    "    def days_between(self):\n",
-    "        d1, d2 = datetime.strptime(self.current_date, \"%Y-%m-%d\"), datetime.strptime(self.expiration_date, \"%Y-%m-%d\")\n",
-    "        diff_times = (abs((d2 - d1).days))/365\n",
-    "        return diff_times\n",
+    "    def risk_free_rate(self): # calculate risk-free rate of return\n",
+    "        rates = pd.read_csv('rates.csv')\n",
     "\n",
-    "    def market_price(self):\n",
-    "        ticker_symbol = yf.Ticker(self.ticker_symbol).info\n",
-    "        market_price = ticker_symbol['regularMarketPrice']\n",
-    "        return market_price # spot price\n",
+    "        if 0 < self.t <= 1 / 12:\n",
+    "            nominal = rates[\"1 Mo\"].mean()\n",
+    "        elif 1 / 12 < self.t <= 1 / 6:\n",
+    "            nominal = rates[\"2 Mo\"].mean()\n",
+    "        elif 1 / 6 < self.t <= 1 / 4:\n",
+    "            nominal = rates[\"3 Mo\"].mean()\n",
+    "        elif 1 / 4 < self.t <= 1 / 3:\n",
+    "            nominal = rates[\"4 Mo\"].mean()\n",
+    "        elif 1 / 3 < self.t <= 1 / 2:\n",
+    "            nominal = rates[\"6 Mo\"].mean()\n",
+    "        elif 1 /  2 < self.t <= 1:\n",
+    "            nominal = rates[\"1 yr\"].mean()\n",
+    "        elif 1 < self.t <= 2:\n",
+    "            nominal = rates[\"2 Yr\"].mean()\n",
+    "        elif 2 < self.t <= 3:\n",
+    "            nominal = rates[\"3 Yr\"].mean()\n",
+    "        elif 3 < self.t <= 5:\n",
+    "            nominal = rates[\"5 Yr\"].mean()\n",
+    "        elif 5 < self.t <= 7:\n",
+    "            nominal = rates[\"7 Yr\"].mean()\n",
+    "        elif 7 < self.t <= 10:\n",
+    "            nominal = rates[\"10 Yr\"].mean()\n",
+    "        elif 10 < self.t <= 20:\n",
+    "            nominal = rates[\"20 Yr\"].mean()\n",
+    "        elif 20 < self.t <= 30:\n",
+    "            nominal = rates[\"30 Yr\"].mean()\n",
     "\n",
-    "    def risk_free_rate(self):\n",
-    "        # still need to use API to find nominal_rate and inflation_rate\n",
-    "        risk_free_rate = ((1+nominal_rate)/(1+inflation_rate))\n",
-    "        return risk_free_rate\n",
+    "        return (1 + nominal) / (1 + 0.077)\n",
     "\n",
-    "    def dividend_yield(self):\n",
-    "        ticker_symbol = yf.Ticker(self.ticker_symbol).info\n",
-    "        dividend_rate = ticker_symbol['dividendRate']\n",
-    "        if dividend_rate == None:\n",
-    "            dividend_rate = 0\n",
-    "        return dividend_rate\n",
+    "    def benchmark_rate(self): # calculate performance of a benchmark\n",
+    "                                                                    # set the S&P as the default benchmark\n",
+    "        \"\"\"\"\n",
+    "            add implementation\n",
+    "        \"\"\"\n",
+    "        pass;\n",
     "\n",
+    "    def pricing(self): # pricing of a singular futures contract on underlying equity\n",
+    "        return float(100 * self.s * np.e**((self.rf - self.q)*self.t));\n",
     "\n",
-    "    def futures_formula(self):\n",
-    "        Price_contract =  self.market_price()*np.e**((self.risk_free_rate()-self.dividend_yield())*(self.days_between()))\n",
-    "        return Price_contract\n",
+    "    def beta(self, abc: str, xyz: str): # covariance function\n",
     "\n",
+    "        return np.cov(abc, xyz);\n",
     "\n",
-    "    def portfolio(self):\n",
-    "        ticker_symbol = yf.Ticker(self.ticker_symbol)\n",
+    "    def expected_return(self): # calculate the expected return (w/ respect to a benchmark)\n",
+    "        return float(Hedge.risk_free_rate() + Hedge.beta()*(Hedge.benchmark_rate() - Hedge.risk_free_rate()));\n",
+    "\n",
+    "    def n(self): # calculate the ideal number of futures contracts on the underlying equity\n",
+    "        return float(Hedge.beta() * self.shares / Hedge.pricing());\n",
+    "\n",
+    "    def portfolio(self,): # construct an ideal portfolio, containing the user's existing\n",
+    "                                # position in the underlying equity and n futures contracts\n",
+    "\n",
     "        pass\n",
     "\n",
-    "    def __str__(self):\n",
-    "        return f\"Current date {str(self.current_date)}; difference between dates {str(self.days_between())}; upper case ticker {self.ticker_symbol}; market {self.market_price()}; dividend rate {self.dividend_yield()}: \"\n",
+    "    def basis_risk(self): # calculate basis risk of portfolio\n",
+    "        return float(Hedge.n() * (self.s - Hedge.pricing()));\n",
+    "\n",
+    "    def metrics(self): # calculate performance & risk metric of portfolio\n",
+    "\n",
+    "        pass\n",
+    "\n",
+    "    def _str_(self):\n",
+    "\n",
+    "        pass\n",
+    "\n",
     "\n",
     "tesla = EDWARD_dashboard(\"tSlA\",\"future\",300,\"2022-11-11\")\n",
     "print(tesla)\n",
@@ -146,31 +237,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Date', '1 Mo', '2 Mo', '3 Mo', '4 Mo', '6 Mo', '1 Yr', '2 Yr', '3 Yr', '5 Yr', '7 Yr', '10 Yr', '20 Yr', '30 Yr']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# with open(\"rates.csv\", 'r') as file:\n",
+    "#     rates = csv.reader(file)\n",
+    "#     for row in rates:\n",
+    "#         print(row)\n",
+    "#         break"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "outputs": [],
    "source": [
-    "\"\"\"\n",
-    "Risk Free Rate Calculator based on 3-Month US treasury Bill Rates\n",
-    "Author: ranaroussi\n",
-    "link: https://gist.github.com/ranaroussi/72d0e92bbe31d1514baccf00175049e4\n",
-    "\"\"\"\n",
-    "# de-annualize yearly interest rates\n",
-    "def deannualize(annual_rate, periods=365):\n",
-    "    return (1 + annual_rate) ** (1/periods) - 1\n",
+    "rates = pd.read_csv('rates.csv')\n",
     "\n",
-    "def get_risk_free_rate():\n",
-    "    # download 3-month us treasury bills rates\n",
-    "    annualized = yf.download(\"^IRX\")[\"Adj Close\"]\n",
+    "if 0 < self.t <= 1 / 12:\n",
+    "    nominal = rates[\"1 Mo\"].mean()\n",
+    "elif 1 / 12 < self.t <= 1 / 6:\n",
+    "    nominal = rates[\"2 Mo\"].mean()\n",
+    "elif 1 / 6 < self.t <= 1 / 4:\n",
+    "    nominal = rates[\"3 Mo\"].mean()\n",
+    "elif 1 / 4 < self.t <= 1 / 3:\n",
+    "    nominal = rates[\"4 Mo\"].mean()\n",
+    "elif 1 / 3 < self.t <= 1 / 2:\n",
+    "    nominal = rates[\"6 Mo\"].mean()\n",
+    "elif 1 /  2 < self.t <= 1:\n",
+    "    nominal = rates[\"1 yr\"].mean()\n",
+    "elif 1 < self.t <= 2:\n",
+    "    nominal = rates[\"2 Yr\"].mean()\n",
+    "elif 2 < self.t <= 3:\n",
+    "    nominal = rates[\"3 Yr\"].mean()\n",
+    "elif 3 < self.t <= 5:\n",
+    "    nominal = rates[\"5 Yr\"].mean()\n",
+    "elif 5 < self.t <= 7:\n",
+    "    nominal = rates[\"7 Yr\"].mean()\n",
+    "elif 7 < self.t <= 10:\n",
+    "    nominal = rates[\"10 Yr\"].mean()\n",
+    "elif 10 < self.t <= 20:\n",
+    "    nominal = rates[\"20 Yr\"].mean()\n",
+    "elif 20 < self.t <= 30:\n",
+    "    nominal = rates[\"30 Yr\"].mean()\n",
     "\n",
-    "    # de-annualize\n",
-    "    daily = annualized.apply(deannualize)\n",
-    "\n",
-    "    # create dataframe\n",
-    "    return pd.DataFrame({\"annualized\": annualized, \"daily\": daily})\n",
-    "\n",
-    "if __name__ == \"__main__\":\n",
-    "    rates = get_risk_free_rate()\n",
-    "    print(rates.tail())"
+    "print((1 + nominal) / (1 + 0.077))"
    ],
    "metadata": {
     "collapsed": false,
