--- a/notebook_dashboard.ipynb
+++ b/notebook_dashboard.ipynb
@@ -90,7 +90,7 @@
    "source": [
     "# parent/super class\n",
     "class Hedge:\n",
-    "    def __init__(self, s: float, t0: str, tf: str, q: float = 0.00, tol: float = 0.00, liq: float = 10000, shares: float = 100, ticker =\"GSPC\"):\n",
+    "    def __init__(self, s: float, t0: str, tf: str, tol: float = 0.00, liq: float = 10000, shares: float = 100, ticker =\"GSPC\"):\n",
     "        assert (1 <= len(ticker) <= 5);  # ticker symbol must have between one and five characters\n",
     "        assert s >= 0  # stock price cannot be less than $0.00\n",
     "        assert q >= 0 # dividend yield cannot be less than 0.00%\n",
@@ -102,7 +102,7 @@
     "        # spot price\n",
     "        self.s = float(self.ticker['regularMarketPrice'])\n",
     "        # risk free rate\n",
-    "        self.rf = Hedge.risk_free_rate()\n",
+    "        self.rf = self.risk_free_rate()\n",
     "        # dividend yield\n",
     "        self.q = float(self.ticker['dividendRate'])\n",
     "        # intial date\n",
@@ -151,24 +151,31 @@
     "        return (1 + nominal) / (1 + 0.077)\n",
     "\n",
     "    def benchmark_rate(self): # calculate performance of a benchmark\n",
-    "                                                                    # set the S&P as the default benchmark\n",
+    "        his_table = yf.download(\"GSPC\", self.t0-(self.t*365))['Adj Close']\n",
+    "        hist_s = his_table.loc[self.t0-(self.t*365)][self.ticker]\n",
+    "        benchmark_rate = abs(hist_s-self.s)/hist_s\n",
+    "        return benchmark_rate\n",
+    "\n",
+    "        # set the S&P as the default benchmark\n",
     "        \"\"\"\"\n",
     "            add implementation\n",
     "        \"\"\"\n",
     "        pass;\n",
     "\n",
     "    def pricing(self): # pricing of a singular futures contract on underlying equity\n",
+    "        if self.q == None:\n",
+    "            self.q = 0\n",
     "        return float(100 * self.s * np.e**((self.rf - self.q)*self.t));\n",
     "\n",
-    "    def beta(self, abc: str, xyz: str): # covariance function\n",
-    "\n",
-    "        return np.cov(abc, xyz);\n",
+    "    def beta(self): # covariance function sotck value and futures contract\n",
+    "        stock_table = yf.download(self.ticker, self.t0)\n",
+    "        # return np.cov(abc, xyz)\n",
     "\n",
     "    def expected_return(self): # calculate the expected return (w/ respect to a benchmark)\n",
-    "        return float(Hedge.risk_free_rate() + Hedge.beta()*(Hedge.benchmark_rate() - Hedge.risk_free_rate()));\n",
+    "        return float(self.risk_free_rate() + self.beta()*(Hedge.benchmark_rate() - self.risk_free_rate()));\n",
     "\n",
     "    def n(self): # calculate the ideal number of futures contracts on the underlying equity\n",
-    "        return float(Hedge.beta() * self.shares / Hedge.pricing());\n",
+    "        return float(Hedge.beta() * self.shares / self.pricing());\n",
     "\n",
     "    def portfolio(self,): # construct an ideal portfolio, containing the user's existing\n",
     "                                # position in the underlying equity and n futures contracts\n",
@@ -176,7 +183,7 @@
     "        pass\n",
     "\n",
     "    def basis_risk(self): # calculate basis risk of portfolio\n",
-    "        return float(Hedge.n() * (self.s - Hedge.pricing()));\n",
+    "        return float(Hedge.n() * (self.s - self.pricing()));\n",
     "\n",
     "    def metrics(self): # calculate performance & risk metric of portfolio\n",
     "\n",
