added logic of beta method Jason Ang

--- a/notebook_dashboard.ipynb
+++ b/notebook_dashboard.ipynb
@@ -125,16 +125,18 @@
     "        benchmark_rate = abs(gspc['regularMarketPrice']- hist_s)/hist_s\n",
     "        return benchmark_rate\n",
     "\n",
-    "    def pricing(self): # pricing of a singular futures contract on underlying equity\n",
+    "    def pricing(self, t = self.t, s = self.s): # pricing of a singular futures contract on underlying equity\n",
     "        if self.q is None:\n",
     "            self. q = 0\n",
-    "        return 100 * self.s * np.e**(self.rf - self.q*self.t)\n",
+    "        return 100 * s * np.e**(self.rf - self.q*t)\n",
     "\n",
     "    def beta(self): # covariance function\n",
-    "        \"\"\"\"\n",
-    "            add implementation\n",
-    "        \"\"\"\n",
-    "        pass\n",
+    "        hist_price = np.array()\n",
+    "        contracts = np.array()\n",
+    "        for i in range(len(hist_price)):\n",
+    "            contracts.append(self.pricing(t =1/52, s = hist_price[i]))\n",
+    "        return np.Covariance(hist_price,contracts)\n",
+    "\n",
     "\n",
     "    def expected_return(self): # calculate the expected return (w/ respect to a benchmark)\n",
     "        return float(self.risk_free_rate() + self.beta()*(self.benchmark_rate() - self.risk_free_rate()))\n",
