added logic of beta method Jason Ang

--- a/notebook_dashboard.ipynb
+++ b/notebook_dashboard.ipynb
@@ -8,7 +8,8 @@
     "from datetime import datetime  # calculating time until expiration\n",
     "import numpy as np  # performing numerical methods\n",
     "import pandas as pd  # printing dataframes\n",
-    "import yfinance as yf # retrieving financial data\n"
+    "import yfinance as yf # retrieving financial data\n",
+    "from yahoo_finance import Share # used to get historical data of stock\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -131,7 +132,8 @@
     "        return 100 * s * np.e**(self.rf - self.q*t)\n",
     "\n",
     "    def beta(self): # covariance function\n",
-    "        hist_price = np.array()\n",
+    "        start_date = '1990-01-01'\n",
+    "        hist_price = np.array([c['Close'] for c in self.ticker.get_historical(start_date, self.t0)])\n",
     "        contracts = np.array()\n",
     "        for i in range(len(hist_price)):\n",
     "            contracts.append(self.pricing(t =1/52, s = hist_price[i]))\n",
@@ -145,8 +147,7 @@
     "        return float(self.beta() * self.shares / self.pricing())\n",
     "\n",
     "    def portfolio(self): # construct an ideal portfolio, containing the user's existing\n",
-    "                                # position in the underlying equity and n futures contracts\n",
-    "\n",
+    "        # position in the underlying equity and n futures contracts\n",
     "        data = [(\"stock\", self.shares / self.s, \"$\" + str(self.shares)),\n",
     "                    (\"futures\", self.n(), \"$\" + str(self.n() * self.pricing()))]\n",
     "\n",
